# 8-practica-contenedores-26-03-25

./: CMakeLists.txt
admin/: Estudiante.cpp  Estudiante.h  GestorTareas.cpp  GestorTareas.h  Tarea.cpp  Tarea.h
